--- a/src/assets/styles/dialog.css
+++ b/src/assets/styles/dialog.css
@@ -1,11 +1,34 @@
 .dialog-container {
-  position: relative;
-  justify-content: center;
-  align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.6);
+  display: flex;
+  justify-content: center; /* Horizontally center */
+  align-items: center; /* Vertically center */
+  z-index: 999; /* Ensure it appears on top of other content */
+}
+
+.dialog-content {
+  background: white;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  text-align: center;
 }
 
 .close-button {
   position: absolute;
-  top: 0;
-  left: 0;
+  top: 31.5%;
+  left: 40%;
+  background: none;
+  border: none;
+  font-size: 13px;
+  cursor: pointer;
+  background-color: blue;
+  border-radius: .2rem;
+  color: rgb(236, 233, 233); /* Add a color that contrasts with the background */
+  z-index: 1000; /* Make sure it's above other elements */
 }
