--- a/src/assets/styles/cart.css
+++ b/src/assets/styles/cart.css
@@ -1,10 +1,10 @@
 
 .cart-container {
-  display: flex;
+  display: flex;    
   flex-direction: column;
+    height:10%;
   margin-top: 1%;
   align-items: center;
-  height: 100vh; /* Centers vertically within the viewport */
 }
 
 p{
